--- a/index.html
+++ b/index.html
@@ -1,27 +1,75 @@
-function doGet(e) {
-  const sheet = SpreadsheetApp.getActiveSpreadsheet().getSheetByName("Customers");
-  const id = e.parameter.id;
-
-  if (!id) {
-    return ContentService.createTextOutput(JSON.stringify({ message: "No ID provided." }))
-                         .setMimeType(ContentService.MimeType.JSON);
-  }
-
-  const data = sheet.getDataRange().getValues();
-  let found = false;
-
-  for (let i = 1; i < data.length; i++) {
-    if (data[i][0] === id) {
-      found = true;
-      return ContentService.createTextOutput(JSON.stringify({
-        message: `Hi ${id}, you've had ${data[i][1]} coffee${data[i][1] == 1 ? '' : 's'} so far.`
-      })).setMimeType(ContentService.MimeType.JSON);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LattéLink Check-In</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 50px;
+      background-color: #fdf6f0;
+      color: #333;
     }
-  }
+    h1 {
+      margin-bottom: 20px;
+      color: #473324;
+    }
+    input, button {
+      font-size: 1rem;
+      padding: 10px;
+      margin: 10px;
+      width: 280px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #a67c52;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    #message {
+      margin-top: 30px;
+      font-weight: bold;
+      color: #473324;
+    }
+  </style>
+</head>
+<body>
 
-  // If not found, add to sheet
-  sheet.appendRow([id, 0, new Date()]);
-  return ContentService.createTextOutput(JSON.stringify({
-    message: `Welcome ${id}! You've been added to the system. Start collecting coffees today!`
-  })).setMimeType(ContentService.MimeType.JSON);
-}
+  <h1>LattéLink</h1>
+  <p>Check in to track your coffee rewards</p>
+
+  <input type="text" id="userId" placeholder="Enter phone number or email" />
+  <button onclick="submitForm()">Check In</button>
+
+  <div id="message"></div>
+
+  <script>
+    async function submitForm() {
+      const userId = document.getElementById('userId').value.trim();
+      const messageDiv = document.getElementById('message');
+      messageDiv.innerText = 'Checking in...';
+
+      if (!userId) {
+        messageDiv.innerText = 'Please enter a valid ID.';
+        return;
+      }
+
+      try {
+        const response = await fetch(`https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID_HERE/exec?id=${encodeURIComponent(userId)}`);
+        const data = await response.json();
+        messageDiv.innerText = data.message || 'Checked in!';
+      } catch (err) {
+        console.error(err);
+        messageDiv.innerText = 'Error connecting to server. Please try again.';
+      }
+    }
+  </script>
+
+</body>
+</html>
