--- a/index.html
+++ b/index.html
@@ -1,74 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LattéLink Check-In</title>
+  <title>LatteLink Staff PIN</title>
   <style>
     body {
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 50px;
-      background-color: #fdf6f0;
-      color: #333;
+      background: #f4ede4;
+      font-family: 'Segoe UI', sans-serif;
+      text-align: center;
+      padding-top: 80px;
+      color: #3e2f26;
     }
     h1 {
+      font-size: 36px;
       margin-bottom: 20px;
-      color: #473324;
     }
-    input, button {
-      font-size: 1rem;
-      padding: 10px;
-      margin: 10px;
-      width: 280px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #a67c52;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    #message {
-      margin-top: 30px;
+    #pin {
+      font-size: 72px;
       font-weight: bold;
-      color: #473324;
+      background: #fff;
+      padding: 20px 40px;
+      border-radius: 12px;
+      border: 2px solid #a67c52;
+      display: inline-block;
+    }
+    #countdown {
+      margin-top: 10px;
+      font-size: 18px;
+      color: #6d4c41;
     }
   </style>
 </head>
 <body>
 
-  <h1>LattéLink</h1>
-  <p>Check in to track your coffee rewards</p>
-
-  <input type="text" id="userId" placeholder="Enter phone number or email" />
-  <button onclick="submitForm()">Check In</button>
-
-  <div id="message"></div>
+  <h1>☕ Staff Code (30-sec PIN)</h1>
+  <div id="pin">------</div>
+  <div id="countdown"></div>
 
   <script>
-    async function submitForm() {
-      const userId = document.getElementById('userId').value.trim();
-      const messageDiv = document.getElementById('message');
-      messageDiv.innerText = 'Checking in...';
+    const secret = "latte_link_secret"; // same secret as your Apps Script
+    const pinBox = document.getElementById("pin");
+    const countdown = document.getElementById("countdown");
 
-      if (!userId) {
-        messageDiv.innerText = 'Please enter a valid ID.';
-        return;
-      }
+    function getCurrentPIN(secret) {
+      const timestamp = Math.floor(Date.now() / 30000).toString();
+      const encoder = new TextEncoder();
+      const keyData = encoder.encode(secret);
+      const msgData = encoder.encode(timestamp);
 
-      try {
-        const response = await fetch(`https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID_HERE/exec?id=${encodeURIComponent(userId)}`);
-        const data = await response.json();
-        messageDiv.innerText = data.message || 'Checked in!';
-      } catch (err) {
-        console.error(err);
-        messageDiv.innerText = 'Error connecting to server. Please try again.';
-      }
+      return crypto.subtle.importKey("raw", keyData, { name: "HMAC", hash: "SHA-256" }, false, ["sign"])
+        .then(key => crypto.subtle.sign("HMAC", key, msgData))
+        .then(sig => {
+          const bytes = new Uint8Array(sig);
+          const pinInt = (bytes[0] + bytes[1]) % 1000000;
+          return pinInt.toString().padStart(6, "0");
+        });
     }
+
+    async function updatePIN() {
+      const timeLeft = 30 - Math.floor((Date.now() / 1000) % 30);
+      countdown.textContent = `New PIN in ${timeLeft}s`;
+
+      const pin = await getCurrentPIN(secret);
+      pinBox.textContent = pin;
+    }
+
+    updatePIN();
+    setInterval(updatePIN, 1000);
   </script>
 
 </body>
