--- a/index.html
+++ b/index.html
@@ -1,74 +1,76 @@
-const SECRET = "latte_link_secret"; // Your secret for rotating PIN
-
-function getCurrentPin() {
-  const now = Math.floor(Date.now() / 30000);
-  const key = Utilities.newBlob(SECRET).getBytes();
-  const message = Utilities.newBlob(now.toString()).getBytes();
-  const signature = Utilities.computeHmacSha256Signature(message, key);
-  
-  let num = 0;
-  for (let i = 0; i < 4; i++) {
-    num = (num << 8) + (signature[i] & 0xff);
-  }
-  num = Math.abs(num) % 1000000;
-  return ("000000" + num).slice(-6);
-}
-
-function jsonResponse(obj) {
-  return ContentService.createTextOutput(JSON.stringify(obj)).setMimeType(ContentService.MimeType.JSON);
-}
-
-function doPost(e) {
-  try {
-    const params = e.parameter;
-    const id = (params.id || "").trim().toLowerCase();
-    const pin = (params.pin || "").trim();
-
-    if (!id || !pin) {
-      return jsonResponse({ error: "Missing customer ID or staff PIN." });
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LattéLink Staff PIN</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fdf6f0;
+      text-align: center;
+      padding: 60px 20px;
+      color: #473324;
     }
 
-    if (pin !== getCurrentPin()) {
-      return jsonResponse({ error: "Invalid staff PIN." });
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
     }
 
-    const ss = SpreadsheetApp.getActiveSpreadsheet();
-    const sheet = ss.getSheetByName("Customers");
-    if (!sheet) {
-      return jsonResponse({ error: "Sheet 'Customers' not found." });
+    #pin {
+      font-size: 48px;
+      font-weight: bold;
+      background: #fff3e6;
+      padding: 20px 40px;
+      border-radius: 12px;
+      border: 2px solid #a67c52;
+      display: inline-block;
+      margin-top: 20px;
+      letter-spacing: 6px;
     }
 
-    const data = sheet.getDataRange().getValues();
+    #countdown {
+      margin-top: 12px;
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
 
-    const idCol = 0;
-    const coffeeCol = 1;
-    const dateCol = 2;
+  <h1>☕ LattéLink Staff PIN</h1>
+  <div id="pin">Loading...</div>
+  <div id="countdown"></div>
 
-    let rowIndex = -1;
-    for (let i = 1; i < data.length; i++) {
-      if (data[i][idCol].toString().toLowerCase() === id) {
-        rowIndex = i + 1;
-        break;
+  <script>
+    const backendUrl = "https://script.google.com/macros/s/AKfycbx6n7yLCWJeF1DQY9187HamVjCm5kRNu3cymLSHE03RALQQ_RZsETX-iOTJxuDaNJN3/exec";
+    const pinDiv = document.getElementById("pin");
+    const countdownDiv = document.getElementById("countdown");
+
+    async function fetchPin() {
+      try {
+        const res = await fetch(backendUrl);
+        const pin = await res.text();
+        pinDiv.textContent = pin;
+      } catch (err) {
+        pinDiv.textContent = "❌ Error";
       }
     }
 
-    if (rowIndex === -1) {
-      // New customer: add with 1 coffee
-      sheet.appendRow([id, 1, new Date()]);
-      return jsonResponse({ coffees: 1, message: "Welcome! Your first coffee has been added." });
-    } else {
-      // Existing customer: increment coffee count
-      let currentCount = Number(sheet.getRange(rowIndex, coffeeCol + 1).getValue()) || 0;
-      currentCount++;
-      sheet.getRange(rowIndex, coffeeCol + 1).setValue(currentCount);
-      sheet.getRange(rowIndex, dateCol + 1).setValue(new Date());
-      return jsonResponse({ coffees: currentCount, message: "Coffee count updated." });
+    function updateCountdown() {
+      const secondsLeft = 30 - (Math.floor(Date.now() / 1000) % 30);
+      countdownDiv.textContent = `PIN refreshes in ${secondsLeft} second${secondsLeft !== 1 ? 's' : ''}`;
     }
-  } catch (err) {
-    return jsonResponse({ error: "Error: " + err.message });
-  }
-}
 
-function doGet() {
-  return ContentService.createTextOutput("Please use POST requests only.").setMimeType(ContentService.MimeType.TEXT);
-}
+    // Fetch on load and update every 30s
+    fetchPin();
+    updateCountdown();
+    setInterval(() => {
+      fetchPin();
+    }, 30000);
+    setInterval(updateCountdown, 1000);
+  </script>
+
+</body>
+</html>
